texmaker bug - remove hyperref package

--- a/preamble/packete.tex
+++ b/preamble/packete.tex
@@ -13,7 +13,7 @@
 \usepackage{listings} %% Codebeispiele
 \usepackage{subfigure} %% Mehrere Bilder nebeneinander
 \usepackage[hyphens,spaces,obeyspaces]{url}
-\usepackage{hyperref} %% referenzen innerhalb und außerhalb des Dokumentes
+%% cannot be used with textmaker \usepackage{hyperref} %% referenzen innerhalb und außerhalb des Dokumentes
 \usepackage{verbatim} %% multiline comments \begin{comment} hello world \end{comment}
 \usepackage{csquotes}
 \usepackage{enumitem}
